--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1374849913,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
   "date": "2025-Oct-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 337888409
 }
