--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1867420736,
+  "seed": 818321370,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-3",
-  "rate": "4.09"
+  "rate": "4.09",
+  "date": "2025-Oct-3"
 }
