--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 818321370,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-3",
+  "seed": 1843168381,
   "rate": "4.09",
-  "date": "2025-Oct-3"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
