--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1562777063,
   "date": "2025-Oct-3",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1728753118
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
