--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-3",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
-  "seed": 478260733
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 823733467,
+  "date": "2025-Oct-3"
 }
