--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 823733467,
-  "date": "2025-Oct-3"
+  "seed": 1461984527,
+  "date": "2025-Oct-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
