--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
-  "seed": 1461984527,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.09",
+  "seed": 205655508
 }
