--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 279498033,
   "date": "2025-Oct-3",
-  "rate": "4.09",
-  "seed": 205655508
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.09"
 }
