--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1811130988,
+  "seed": 1653617244,
+  "rate": "4.09",
   "date": "2025-Oct-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
