--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2052182895,
+  "date": "2025-Oct-6",
   "rate": "4.09",
-  "seed": 995853392,
-  "date": "2025-Oct-6"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
