--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1019577187,
   "rate": "4.09",
-  "seed": 1023986423,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-6"
+  "date": "2025-Oct-6",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
