--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1019577187,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
   "date": "2025-Oct-6",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1418026900
 }
