--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 80737235,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
-  "date": "2025-Oct-6"
+  "date": "2025-Oct-6",
+  "seed": 1030785547,
+  "rate": "4.09"
 }
