--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-6",
-  "seed": 1030785547,
-  "rate": "4.09"
+  "rate": "4.09",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1155275167
 }
