--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-6",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1155275167
+  "date": "2025-Oct-6",
+  "seed": 931672874,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
