--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
+  "seed": 561896522,
   "date": "2025-Oct-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1555099078
+  "rate": "4.09"
 }
