--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1959822043,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-7",
-  "rate": "4.09",
-  "seed": 1797721656
+  "rate": "4.09"
 }
