--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-7",
   "rate": "4.09",
-  "seed": 2049108242,
-  "date": "2025-Oct-7"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 410724269
 }
