--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-7",
-  "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 410724269
+  "date": "2025-Oct-7",
+  "seed": 332365693,
+  "rate": "4.09"
 }
