--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1308956451,
-  "rate": "4.09",
+  "seed": 1263355252,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.09"
 }
