--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-7",
-  "rate": "4.09",
-  "seed": 1572781225,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 435068075,
+  "date": "2025-Oct-8",
+  "rate": "4.10"
 }
