--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 435068075,
+  "rate": "4.10",
+  "seed": 436123269,
   "date": "2025-Oct-8",
-  "rate": "4.10"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
