--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-8",
   "rate": "4.10",
-  "seed": 712105360
+  "date": "2025-Oct-8",
+  "seed": 1745559748,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
