--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "date": "2025-Oct-8",
-  "seed": 1745559748,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2128365247,
+  "date": "2025-Oct-8"
 }
