--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.10",
   "date": "2025-Oct-8",
-  "seed": 2063119943,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1824033778,
+  "rate": "4.10"
 }
