--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-8",
+  "rate": "4.10",
+  "seed": 719439232,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1824033778,
-  "rate": "4.10"
+  "date": "2025-Oct-8"
 }
