--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.10",
-  "seed": 719439232,
+  "date": "2025-Oct-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-8"
+  "seed": 1283033566,
+  "rate": "4.10"
 }
