--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-9",
   "rate": "4.10",
-  "seed": 850681110,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Oct-9",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1194113568
 }
