--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 669862374,
   "rate": "4.10",
   "date": "2025-Oct-9",
-  "seed": 1749324078
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
