--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-9",
   "rate": "4.10",
-  "seed": 1365328056,
-  "date": "2025-Oct-9"
+  "seed": 1737773424,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
