--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 637124453,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-9",
-  "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1346957040,
+  "rate": "4.10"
 }
