--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10",
   "date": "2025-Oct-9",
-  "seed": 267783749
+  "rate": "4.10",
+  "seed": 1127830159,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
