--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "seed": 1974165588,
-  "date": "2025-Oct-9"
+  "date": "2025-Oct-9",
+  "seed": 578789568,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
