--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 571186463,
-  "date": "2025-Oct-9",
   "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 202596049,
+  "date": "2025-Oct-9"
 }
