--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-9",
-  "seed": 398791074,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1177753801
 }
