--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10",
-  "seed": 1177753801
+  "seed": 1897881068,
+  "rate": "4.10"
 }
