--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1164236192,
-  "rate": "4.10"
+  "date": "2025-Oct-9",
+  "rate": "4.10",
+  "seed": 112950420
 }
