--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1122960135,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-9",
   "rate": "4.10",
-  "seed": 112950420
+  "date": "2025-Oct-9"
 }
