--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1122960135,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "date": "2025-Oct-9"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-9",
+  "seed": 1609139862
 }
