--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.10",
+  "seed": 1959365703,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-9",
-  "seed": 1609139862
+  "date": "2025-Oct-13*",
+  "rate": "4.10"
 }
