--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.10",
+  "seed": 861289114,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1121184638,
-  "date": "2025-Oct-13*",
-  "rate": "4.10"
+  "date": "2025-Oct-13*"
 }
