--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.10",
-  "seed": 861289114,
+  "date": "2025-Oct-13*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-13*"
+  "seed": 202846593
 }
