--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-13*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1418331156,
-  "rate": "4.10"
+  "date": "2025-Oct-13*",
+  "rate": "4.10",
+  "seed": 684980043
 }
