--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-13*",
-  "rate": "4.10",
-  "seed": 684980043
+  "seed": 1135321699,
+  "rate": "4.10"
 }
