--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 583405240,
-  "date": "2025-Oct-13*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10"
+  "seed": 439780986,
+  "rate": "4.10",
+  "date": "2025-Oct-13*"
 }
