--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 964967527,
   "rate": "4.10",
-  "date": "2025-Oct-13*"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-13*",
+  "seed": 63850109
 }
