--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-13*",
-  "seed": 63850109
+  "seed": 482794315,
+  "date": "2025-Oct-13*"
 }
