--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.10",
-  "date": "2025-Oct-14",
-  "seed": 1037501707,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1947624923,
+  "date": "2025-Oct-14"
 }
