--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1947624923,
-  "date": "2025-Oct-14"
+  "date": "2025-Oct-14",
+  "seed": 444069210,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
