--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
   "date": "2025-Oct-14",
-  "seed": 444069210,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 642382506
 }
