--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-14",
-  "rate": "4.10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 434911028
+  "rate": "4.10",
+  "seed": 493719406,
+  "date": "2025-Oct-14"
 }
