--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "seed": 493719406,
-  "date": "2025-Oct-14"
+  "date": "2025-Oct-14",
+  "seed": 339405786,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
