--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1601933685,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-14",
   "rate": "4.10",
-  "date": "2025-Oct-14"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1082133383
 }
