--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-14",
+  "date": "2025-Oct-15",
+  "seed": 743812482,
   "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 600135248
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
