--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1229426820,
+  "seed": 174984651,
   "date": "2025-Oct-15",
-  "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.10"
 }
