--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2029668489,
+  "seed": 813604065,
+  "rate": "4.10",
   "date": "2025-Oct-15",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
