--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1600228405,
-  "date": "2025-Oct-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10"
+  "rate": "4.10",
+  "seed": 441882483,
+  "date": "2025-Oct-15"
 }
