--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1136952892,
+  "date": "2025-Oct-15",
   "rate": "4.10",
-  "seed": 441882483,
-  "date": "2025-Oct-15"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
