--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1136952892,
-  "date": "2025-Oct-15",
+  "seed": 656008034,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Oct-15"
 }
