--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 483608254,
   "date": "2025-Oct-15",
-  "rate": "4.10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1738257139
+  "rate": "4.10"
 }
