--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-15",
-  "seed": 1089972670,
+  "seed": 1946721448,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.10"
+  "date": "2025-Oct-16"
 }
