--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1512099711,
-  "rate": "4.11"
+  "rate": "4.11",
+  "date": "2025-Oct-16",
+  "seed": 1824689816
 }
