--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11",
   "date": "2025-Oct-16",
-  "seed": 1824689816
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1664848816,
+  "rate": "4.11"
 }
