--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-16",
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1664848816,
-  "rate": "4.11"
+  "seed": 1552173258,
+  "date": "2025-Oct-16"
 }
