--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1643025036,
+  "date": "2025-Oct-16",
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1552173258,
-  "date": "2025-Oct-16"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
