--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1483248168,
-  "date": "2025-Oct-16"
+  "date": "2025-Oct-16",
+  "seed": 1748681192,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
