--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 753335095,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-16",
-  "rate": "4.11",
-  "seed": 294229771,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.11"
 }
