--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 753335095,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-16",
-  "rate": "4.11"
+  "seed": 2025680877,
+  "rate": "4.11",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
