--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-16",
-  "seed": 2025680877,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 43404794
 }
