--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-16",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-17",
+  "seed": 699470227,
   "rate": "4.11",
-  "seed": 43404794
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
