--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1708742184,
   "date": "2025-Oct-17",
-  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1678221331
+  "rate": "4.11"
 }
