--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-17",
-  "seed": 1846710880,
+  "seed": 514826241,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11"
+  "date": "2025-Oct-17"
 }
