--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 514826241,
+  "date": "2025-Oct-17",
+  "seed": 1848551500,
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-17"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
