--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 562991072,
   "date": "2025-Oct-17",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11"
+  "rate": "4.11",
+  "seed": 1904929799,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
