--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1751272237,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1181416368,
-  "date": "2025-Oct-20",
-  "rate": "4.11"
+  "date": "2025-Oct-20"
 }
