--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Oct-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11",
-  "seed": 1460011918,
-  "date": "2025-Oct-20"
+  "seed": 1415997317,
+  "rate": "4.11"
 }
