--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 17746746,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-20",
+  "seed": 80569084,
   "rate": "4.11",
-  "date": "2025-Oct-20"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
