--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1005573360,
   "date": "2025-Oct-20",
-  "seed": 80569084,
-  "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.11"
 }
