--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 532357723,
-  "date": "2025-Oct-20",
+  "seed": 1170319612,
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-20"
 }
