--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-20",
-  "rate": "4.11",
+  "seed": 1054303434,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 105821454
+  "date": "2025-Oct-20",
+  "rate": "4.11"
 }
