--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1054303434,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-20",
-  "rate": "4.11"
+  "seed": 992259341,
+  "date": "2025-Oct-21",
+  "rate": "4.11",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
