--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 280235682,
-  "rate": "4.11"
+  "rate": "4.11",
+  "seed": 1826476070
 }
