--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-21",
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1018309328
+  "seed": 154560822,
+  "date": "2025-Oct-21",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
