--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1525650019,
   "date": "2025-Oct-21",
-  "rate": "4.11",
-  "seed": 763139726,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.11"
 }
