--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.11",
+  "seed": 817645007,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1525650019,
-  "date": "2025-Oct-21",
-  "rate": "4.11"
+  "date": "2025-Oct-21"
 }
