--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.11",
-  "seed": 817645007,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-21"
+  "date": "2025-Oct-21",
+  "seed": 1577050456
 }
