--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.11",
+  "seed": 961012071,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-22",
-  "seed": 186207927
+  "date": "2025-Oct-22"
 }
