--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 73525569,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-22",
   "rate": "4.11",
-  "date": "2025-Oct-22"
+  "seed": 630865771
 }
