--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-22",
+  "seed": 271423185,
   "rate": "4.11",
-  "seed": 630865771
+  "date": "2025-Oct-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
