--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1284268422,
   "rate": "4.11",
-  "date": "2025-Oct-22",
-  "seed": 1745025918,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Oct-22"
 }
