--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1340251197,
-  "rate": "4.11",
+  "date": "2025-Oct-22",
+  "seed": 1014121371,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-22"
+  "rate": "4.11"
 }
