--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-22",
-  "rate": "4.11",
-  "seed": 186816394
+  "seed": 1494618591,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.11"
 }
