--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-22",
-  "seed": 1494618591,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11"
+  "seed": 744235544
 }
