--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-22",
-  "rate": "4.11",
+  "seed": 41063609,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 744235544
+  "rate": "4.11",
+  "date": "2025-Oct-23"
 }
