--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 41063609,
+  "seed": 1735202032,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11",
-  "date": "2025-Oct-23"
+  "date": "2025-Oct-23",
+  "rate": "4.11"
 }
