--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 283514178,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-23",
   "rate": "4.11",
-  "date": "2025-Oct-23"
+  "seed": 1809714093,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
