--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1348598821,
-  "date": "2025-Oct-23",
+  "seed": 310391396,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11"
+  "date": "2025-Oct-23"
 }
