--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 310391396,
+  "seed": 743219357,
   "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-23"
+  "date": "2025-Oct-23",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
