--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.11",
-  "seed": 1356600595,
   "date": "2025-Oct-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1831135567
 }
