--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-23",
-  "rate": "4.11",
-  "seed": 204389850
+  "seed": 1201923062,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.11"
 }
