--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-23",
-  "seed": 1201923062,
+  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.11"
+  "date": "2025-Oct-24",
+  "seed": 206642168
 }
