--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.11",
+  "seed": 1197360879,
   "date": "2025-Oct-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 497946191
+  "rate": "4.11"
 }
