--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1233892834,
+  "seed": 241012834,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-24",
-  "rate": "4.11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.11"
 }
