--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.11",
+  "seed": 1695882577,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-24",
-  "seed": 193267577
+  "rate": "4.11",
+  "date": "2025-Oct-24"
 }
