--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Oct-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1828467611,
-  "rate": "4.11",
-  "date": "2025-Oct-24"
+  "seed": 895406143,
+  "rate": "4.11"
 }
