--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1860959451,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.11",
   "date": "2025-Oct-24",
-  "rate": "4.11"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 603101811
 }
