--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.11",
-  "date": "2025-Oct-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 603101811
+  "seed": 1891618682,
+  "date": "2025-Oct-24"
 }
