--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1891618682,
-  "date": "2025-Oct-24"
+  "seed": 1642964426,
+  "date": "2025-Oct-24",
+  "rate": "4.11"
 }
