--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1900747181,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-27",
-  "rate": "4.12"
+  "rate": "4.12",
+  "seed": 1121670905,
+  "date": "2025-Oct-27"
 }
