--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 356332359,
+  "date": "2025-Oct-27",
   "rate": "4.12",
-  "seed": 1121670905,
-  "date": "2025-Oct-27"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
