--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-27",
   "rate": "4.12",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 844542012
+  "seed": 1632381956,
+  "date": "2025-Oct-27",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
