--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.12",
-  "seed": 635378518,
+  "seed": 224074922,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-27"
+  "date": "2025-Oct-27",
+  "rate": "4.12"
 }
