--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 234385837,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.12",
-  "date": "2025-Oct-27"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-27",
+  "seed": 1620861343
 }
