--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.12",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 684338057,
   "date": "2025-Oct-27",
-  "seed": 1620861343
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.12"
 }
