--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 71052183,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-27",
-  "rate": "4.12"
+  "rate": "4.12",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1267045254
 }
