--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-27",
   "rate": "4.12",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1267045254
+  "seed": 1627761441,
+  "date": "2025-Oct-28",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
