--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.12",
-  "seed": 150498432,
   "date": "2025-Oct-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1217055103
 }
