--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.12",
   "date": "2025-Oct-28",
-  "seed": 1217055103
+  "seed": 1724001229,
+  "rate": "4.12"
 }
