--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-28",
-  "seed": 1724001229,
-  "rate": "4.12"
+  "rate": "4.12",
+  "seed": 537205391,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
