--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.12",
   "date": "2025-Oct-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1333830413
+  "seed": 677159551,
+  "rate": "4.12"
 }
