--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 39844322,
-  "date": "2025-Oct-28",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1992207367,
   "rate": "4.12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Oct-28"
 }
