--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1992207367,
+  "date": "2025-Oct-28",
   "rate": "4.12",
-  "date": "2025-Oct-28"
+  "seed": 526274895
 }
