--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-28",
   "rate": "4.12",
-  "seed": 526274895
+  "seed": 1502426616,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
