--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-28",
+  "seed": 1047963387,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1869346013,
-  "rate": "4.12"
+  "rate": "4.12",
+  "date": "2025-Oct-29"
 }
