--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 841616604,
-  "rate": "4.12"
+  "rate": "4.12",
+  "date": "2025-Oct-29",
+  "seed": 1720552797
 }
