--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 562797674,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.12",
   "date": "2025-Oct-29",
-  "seed": 1720552797
+  "rate": "4.12"
 }
