--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.12",
   "date": "2025-Oct-29",
-  "seed": 1182253706
+  "seed": 673815084,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.12"
 }
