--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-29",
-  "seed": 673815084,
+  "rate": "4.12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.12"
+  "seed": 1934814754
 }
