--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.12",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Oct-29",
-  "seed": 118423567
+  "rate": "4.12",
+  "seed": 1796100094,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
