--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 603953451,
-  "rate": "4.12",
-  "date": "2025-Oct-29",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2032657980,
+  "rate": "3.87",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-30"
 }
