--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2032657980,
   "rate": "3.87",
+  "date": "2025-Oct-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-30"
+  "seed": 198047291
 }
