--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
   "date": "2025-Oct-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 198047291
+  "seed": 906108203,
+  "rate": "3.87",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
