--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
+  "date": "2025-Oct-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 684125973,
-  "date": "2025-Oct-30"
+  "rate": "3.87",
+  "seed": 1976785375
 }
