--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1335937045,
   "rate": "3.87",
-  "seed": 1976785375
+  "date": "2025-Oct-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
