--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.87",
+  "seed": 1358330105,
   "date": "2025-Oct-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 511519492
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
