--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Oct-30",
-  "seed": 1049960711,
-  "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 379327295,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87"
 }
