--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-31",
-  "seed": 2090357948,
+  "rate": "3.86",
+  "seed": 2116791617,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.86"
+  "date": "2025-Oct-31"
 }
