--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Oct-31",
   "rate": "3.86",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 592293063,
-  "date": "2025-Oct-31"
+  "seed": 434977932
 }
