--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 266080412,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.86",
-  "date": "2025-Oct-31",
-  "seed": 651147118
+  "date": "2025-Oct-31"
 }
