--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Oct-31",
+  "seed": 2014033856,
   "rate": "3.86",
-  "seed": 1496941487,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-31"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
