--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 414777705,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.86",
-  "date": "2025-Oct-31"
+  "rate": "3.87",
+  "date": "2025-Nov-3",
+  "seed": 1558812981
 }
