--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87",
   "date": "2025-Nov-3",
-  "seed": 1558812981
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 564433355,
+  "rate": "3.87"
 }
