--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Nov-3",
-  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1314029599
+  "seed": 215657752,
+  "rate": "3.87"
 }
