--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.87",
-  "seed": 722969934,
-  "date": "2025-Nov-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1589656925,
+  "date": "2025-Nov-3"
 }
