--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
+  "date": "2025-Nov-3",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1589656925,
-  "date": "2025-Nov-3"
+  "seed": 1961067502,
+  "rate": "3.87"
 }
