--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1149501008,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2092530071,
-  "date": "2025-Nov-3",
-  "rate": "3.87"
+  "rate": "3.87",
+  "date": "2025-Nov-3"
 }
