--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1287128812,
-  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-3"
+  "date": "2025-Nov-3",
+  "rate": "3.87",
+  "seed": 428886657
 }
