--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1027647910,
-  "date": "2025-Nov-4"
+  "seed": 486525107,
+  "date": "2025-Nov-4",
+  "rate": "3.87"
 }
