--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 486525107,
-  "date": "2025-Nov-4",
-  "rate": "3.87"
+  "seed": 1842002407,
+  "date": "2025-Nov-4"
 }
