--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 158462925,
+  "seed": 1177762791,
+  "rate": "3.87",
   "date": "2025-Nov-4",
-  "rate": "3.87"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
