--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2015964985,
-  "date": "2025-Nov-4",
-  "rate": "3.87"
+  "rate": "3.87",
+  "seed": 550598890,
+  "date": "2025-Nov-4"
 }
