--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 871749190,
   "rate": "3.87",
-  "seed": 550598890,
-  "date": "2025-Nov-4"
+  "date": "2025-Nov-4",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
