--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 871749190,
-  "rate": "3.87",
   "date": "2025-Nov-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1024693600,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87"
 }
