--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 377295265,
   "rate": "3.87",
-  "date": "2025-Nov-4"
+  "date": "2025-Nov-5",
+  "seed": 2006866219
 }
