--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1659686063,
-  "rate": "3.87",
+  "date": "2025-Nov-5",
+  "seed": 287359347,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-5"
+  "rate": "3.87"
 }
