--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87",
   "date": "2025-Nov-5",
-  "seed": 1009268990
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1151956812,
+  "rate": "3.87"
 }
