--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1521213019,
+  "rate": "3.87",
   "date": "2025-Nov-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87"
+  "seed": 1479552757
 }
