--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-5",
   "rate": "3.87",
-  "seed": 122651774
+  "date": "2025-Nov-5",
+  "seed": 997370583,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
