--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
   "date": "2025-Nov-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 488817695
+  "seed": 1328015045,
+  "rate": "3.87"
 }
