--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2673166,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-6",
-  "seed": 761399839,
-  "rate": "3.87"
+  "rate": "3.87",
+  "date": "2025-Nov-6"
 }
