--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2673166,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 396682696,
+  "date": "2025-Nov-6",
   "rate": "3.87",
-  "date": "2025-Nov-6"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
