--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1532521459,
   "date": "2025-Nov-6",
-  "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 166524688,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87"
 }
