--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1803528651,
   "rate": "3.87",
-  "seed": 82542233
+  "date": "2025-Nov-6"
 }
