--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1803528651,
+  "seed": 197986360,
   "rate": "3.87",
-  "date": "2025-Nov-6"
+  "date": "2025-Nov-6",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
