--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 197986360,
+  "seed": 1271922417,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.87",
-  "date": "2025-Nov-6",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Nov-6"
 }
