--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 29987530,
-  "date": "2025-Nov-6",
-  "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1578076401,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-7",
+  "rate": "3.87"
 }
