--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1578076401,
+  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-7",
-  "rate": "3.87"
+  "seed": 1628001817
 }
