--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-7",
-  "seed": 1628001817
+  "seed": 2016628555,
+  "date": "2025-Nov-7"
 }
