--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-7",
-  "seed": 705574466,
   "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1579487349
 }
