--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Nov-7",
   "rate": "3.87",
-  "seed": 1579487349
+  "seed": 1177783359,
+  "date": "2025-Nov-7"
 }
