--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.87",
-  "seed": 916476811,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1830488952
 }
