--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87",
   "date": "2025-Nov-7",
-  "seed": 1641887307
+  "rate": "3.87",
+  "seed": 192501488,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
