--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
+  "seed": 34322051,
+  "date": "2025-Nov-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 720369933,
-  "date": "2025-Nov-7"
+  "rate": "3.87"
 }
