--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 34322051,
-  "date": "2025-Nov-7",
+  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87"
+  "date": "2025-Nov-7",
+  "seed": 495667151
 }
