--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-7",
-  "seed": 495667151
+  "seed": 1124648273,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87"
 }
