--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-7",
-  "seed": 1124648273,
+  "rate": "3.87",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87"
+  "seed": 1350892420,
+  "date": "2025-Nov-7"
 }
