--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 779277987,
   "rate": "3.87",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1350892420,
-  "date": "2025-Nov-7"
+  "date": "2025-Nov-7",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
