--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 779277987,
+  "seed": 1008990628,
   "rate": "3.87",
-  "date": "2025-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Nov-7"
 }
