--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 101665738,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.87",
-  "date": "2025-Nov-7"
+  "date": "2025-Nov-7",
+  "seed": 550276271
 }
