--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.87",
   "date": "2025-Nov-7",
-  "seed": 2087475909,
-  "rate": "3.87"
+  "seed": 2044793810,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
