--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1172502842,
-  "date": "2025-Nov-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.87"
+  "date": "2025-Nov-7",
+  "rate": "3.87",
+  "seed": 2081020308
 }
