--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 38356455,
-  "rate": "3.87"
+  "rate": "3.87",
+  "date": "2025-Nov-11*",
+  "seed": 447261927,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
