--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-11*",
-  "rate": "3.87",
-  "seed": 1952791990
+  "seed": 531521892,
+  "rate": "3.87"
 }
