--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Nov-11*",
-  "seed": 1060006338,
-  "rate": "3.87"
+  "rate": "3.87",
+  "seed": 571061654,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
